--- a/SMART_REST/SMART_REST/SELECT_LIST.resx
+++ b/SMART_REST/SMART_REST/SELECT_LIST.resx
@@ -478,7 +478,7 @@
         tQTw9f+Vmo4AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonSearch.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAB4AAAAQ4CAYAAADo08FDAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         xAAADsQBlSsOGwAAKLpJREFUeF7t2TENACAQADH8S2MgQdGjg0uHquja9wwAAAAAAAAA/xPAAAAAAAAA
