--- a/SMART_REST/SMART_REST/Properties/Resources.resx
+++ b/SMART_REST/SMART_REST/Properties/Resources.resx
@@ -121,8 +121,14 @@
   <data name="PIC3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PIC3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="S_R (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\S_R (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconUser" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconUser1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="S_R" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\S_R.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="PIC 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PIC 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,7 +142,7 @@
   <data name="PIC 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PIC 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="S_R" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\S_R.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="S_R (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\S_R (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
